Archive2/e3/17262554fa2a7a/output
+ g++-4.8 -std=c++11 -Wall -Wextra main.cpp
main.cpp: In function ‘Parent* make_Parent(int)’:
main.cpp:19:32: error: expected type-specifier before ‘Child’
     if (count <= 8) return new Child<8>();
                                ^
main.cpp:19:32: error: expected ‘;’ before ‘Child’
main.cpp:19:32: error: ‘Child’ was not declared in this scope
main.cpp:19:41: error: expected primary-expression before ‘)’ token
     if (count <= 8) return new Child<8>();
                                         ^
main.cpp:20:33: error: expected type-specifier before ‘Child’
     if (count <= 16) return new Child<16>();
                                 ^
main.cpp:20:33: error: expected ‘;’ before ‘Child’
main.cpp:20:43: error: expected primary-expression before ‘)’ token
     if (count <= 16) return new Child<16>();
                                           ^
main.cpp:21:33: error: expected type-specifier before ‘Child’
     if (count <= 32) return new Child<32>();
                                 ^
main.cpp:21:33: error: expected ‘;’ before ‘Child’
main.cpp:21:43: error: expected primary-expression before ‘)’ token
     if (count <= 32) return new Child<32>();
                                           ^
main.cpp:22:33: error: expected type-specifier before ‘Child’
     if (count <= 64) return new Child<64>();
                                 ^
main.cpp:22:33: error: expected ‘;’ before ‘Child’
main.cpp:22:43: error: expected primary-expression before ‘)’ token
     if (count <= 64) return new Child<64>();
                                           ^
main.cpp:23:34: error: expected type-specifier before ‘Child’
     if (count <= 128) return new Child<128>();
                                  ^
main.cpp:23:34: error: expected ‘;’ before ‘Child’
main.cpp:23:45: error: expected primary-expression before ‘)’ token
     if (count <= 128) return new Child<128>();
                                             ^
main.cpp:24:34: error: expected type-specifier before ‘Child’
     if (count <= 256) return new Child<256>();
                                  ^
main.cpp:24:34: error: expected ‘;’ before ‘Child’
main.cpp:24:45: error: expected primary-expression before ‘)’ token
     if (count <= 256) return new Child<256>();
                                             ^
main.cpp:25:34: error: expected type-specifier before ‘Child’
     if (count <= 512) return new Child<512>();
                                  ^
main.cpp:25:34: error: expected ‘;’ before ‘Child’
main.cpp:25:45: error: expected primary-expression before ‘)’ token
     if (count <= 512) return new Child<512>();
                                             ^
main.cpp:26:11: error: ‘bad_alloc’ is not a member of ‘std’
     throw std::bad_alloc();
           ^
main.cpp:27:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
